# twitter-api

./: .pre-commit-config.yaml  Makefile  README.md  main.py  models.py  pyproject.toml
.code_quality/: .pylintrc
app/: main.py  utils.py
app/api/v1/endpoints/: tweets.py  users.py
app/api/v1/models/: auth.py  tweets.py  users.py
app/mocks/: tweets.json  users.json
app/models/: auth.py  tweets.py  user.py
app/routers/: users.py
